# olin

./: README.md
DSA/: .gitignore  pyproject.toml
DSA/HW1/: egabriel.py
DSA/HW2/: egabriel.py
DSA/HW3/: egabriel.py
DSA/HW4/: egabriel.py
DSA/HW5/: egabriel.py
DSA/HW7/: egabriel.py
DSA/HW9/: egabriel.py
ExercisesInC/exercises/ex01/: cards.c  hello.c
ExercisesInC/exercises/ex02/: adder.c  aspace.c  stack.c
ExercisesInC/exercises/ex02.5/: bigint.c  find_track.c
ExercisesInC/exercises/ex03/: tee.c
ExercisesInC/exercises/ex04/: test_util.c
ExercisesInC/exercises/ex04/trout/: Makefile  main.c  trout.c  trout.h  util.c  util.h
ExercisesInC/exercises/ex05/: find_track_oo.c  rand.c  rand.h  test1.c  time_rand.c
ExercisesInC/exercises/ex07/: Makefile  hash.c
ExercisesInC/exercises/ex08/: Makefile  word_count.c
ExercisesInC/exercises/ex09/: fork.c  newshound.c
ExercisesInC/exercises/ex10/: echo.c  signal_example.c
computational-art/: README.md  REFLECTION.md  recursive_art.py
cuda-computing/: .gitignore
cuda-computing/code/: Makefile  codes.h  convolve_test.cpp  img.cpp  img.h  img_test.cpp  linalg.cpp  linalg.h  main.c  matmath.cu  matmath.h
cuda-computing/reports/: proposal.md  report.md  update.md
foodweb/: .conda-env  environment.yml
foodweb/code/: foodweb.ipynb
foodweb/data/: benguela_yodzis.csv  coachella_polis.csv
foodweb/reports/: draft_report.md  draft_review_Shirin.md  draft_review_elias.md  final_report.md  project_proposal.md
