[tool.poetry]
name = "dsa"
version = "0.1.0"
description = "A repository for storing all my homework assignments for Data Structures and Algorithms."
authors = ["Elias Gabriel <egabriel@olin.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
hypothesis = "^5.8.0"
pytest = "^5.4.1"
seaborn = "^0.10.0"
networkx = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
